--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
                 </a>
                 <nav class="nav">
                     <a class="nav-item" href="/">UX</a>
-                    <a class="nav-item" href="./about.html">About</a>
+                    <a class="nav-item active" href="./about.html">About</a>
                     <a class="nav-item" href="./contact.html">Contact</a>
                 </nav>
             </div>
