--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
                 <nav class="nav">
                     <a class="nav-item" href="/">UX</a>
                     <a class="nav-item" href="./about.html">About</a>
-                    <a class="nav-item" href="./contact.html">Contact</a>
+                    <a class="nav-item active" href="./contact.html">Contact</a>
                 </nav>
             </div>
         </div>
