--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <span class="person-job">UX Designer</span>
                 </a>
                 <nav class="nav">
-                    <a class="nav-item" href="/">UX</a>
+                    <a class="nav-item active" href="/">UX</a>
                     <a class="nav-item" href="./about.html">About</a>
                     <a class="nav-item" href="./contact.html">Contact</a>
                 </nav>
