--- a/projects/cakeseable.html
+++ b/projects/cakeseable.html
@@ -35,7 +35,7 @@
                     <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
-                    <img class="img-fluid" src="/images/cakeseable/cakeseable-template.png" alt="Cakeseable App overview">
+                    <img class="img-fluid" src="/images/cakeseable/cakeseable-app.png" alt="Cakeseable App overview">
                 </div>
             </div>
         </div>
@@ -84,7 +84,6 @@
                     <a href="#usability-study">Usability study</a>
                     <a href="#mockups">Mockups</a>
                     <a href="#accessibility">Accessibility</a>
-                    <a href="#responsive-design">Responsive design</a>
                 </nav>
             </div>
         </div>
@@ -111,22 +110,22 @@
                     <a class="btn btn-primary" href="#" role="button">View lo-fi prototype</a>
                 </div>
                 <div class="d-flex column-gap-3 mb-5 text-center">
-                    <div class="flex-1">
+                    <div class="d-flex flex-column justify-content-between flex-1">
                         <span></span>
                         <strong class="text-start">Users can access the sweet category of their choice.</strong>
-                        <strong class="text-start">This button allows the user to quickly and easily customize their cake.</strong>
+                        <strong class="mb-7 text-start">This button allows the user to quickly and easily customize their cake.</strong>
                     </div>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/cakeseable/home-lo-fi.png" alt="Lo-fi prototype">
                     </div>
-                    <strong class="flex-1 mt-3 text-start">Clicking on the image gives users quick access to the store's new arrivals.</strong>
+                    <strong class="flex-1 mt-7 text-start">Clicking on the image gives users quick access to the store's new arrivals.</strong>
                 </div>
                 <p class="mb-5">Simple navigation was a crucial requirement for users that needed to be addressed in the designs, in addition to making the app compatible with assistive technologies for accessibility.</p>
                 <div class="d-flex column-gap-3 text-center">
-                    <div class="flex-1">
+                    <div class="d-flex flex-column justify-content-between flex-1">
                         <span></span>
                         <strong class="text-start">Dropdown menu accessible to screen reader users.</strong>
-                        <strong class="text-start">Easy language switching access.</strong>
+                        <strong class="mb-7 text-start">Easy language switching access.</strong>
                     </div>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/cakeseable/menu.png" alt="Opened menu in lo-fi prototype">
@@ -199,28 +198,27 @@
                     <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
                 </div>
                 <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center mb-7">
+                    <div class="flex-1"></div>
                     <div class="d-flex flex-column row-gap-2">
-                        <div class="flex-1"></div>
                         <div class="flex-1 flex-basis-25">
                             <img class="mockup-image img-fluid" src="/images/cakeseable/register-lo-fi.png" alt="Lo-fi prototype">
                         </div>
                         <div class="flex-1 flex-basis-25">
-                            <img class="mockup-image img-fluid" src="/images/cakeseable/register.png" alt="Hi-fi prototype">
+                            <img class="mockup-image img-fluid" src="/images/cakeseable/select-product.png" alt="Lo-fi prototype">
                         </div>
-                        <div class="flex-1">Users can log in as guests.</div>
                     </div>
                     <div class="d-flex flex-column row-gap-2">
-                        <div class="flex-1"></div>
-                        <div class="flex-1 flex-basis-25">
-                            <img class="mockup-image img-fluid" src="/images/cakeseable/register-lo-fi.png" alt="Lo-fi prototype">
-                        </div>
                         <div class="flex-1 flex-basis-25">
                             <img class="mockup-image img-fluid" src="/images/cakeseable/register.png" alt="Hi-fi prototype">
                         </div>
-                        <div class="d-flex flex-column flex-1 justify-content-between">
-                            <span class="mt-3">Add to favorites button.</span>
-                            <span class="mb-3">Users can log in as guests.</span>
+                        <div class="flex-1 flex-basis-25">
+                            <img class="mockup-image img-fluid" src="/images/cakeseable/product.png" alt="Hi-fi prototype">
                         </div>
+                    </div>
+                    <div class="d-flex flex-column flex-1 justify-content-between">
+                        <span class="mt-7">Users can log in as guests.</span>
+                        <span class="mt-7">Add to favorites button.</span>
+                        <span class="mb-5">Users can add products to their favorites list.</span>
                     </div>
                 </div>
                 <h4 class="mb-3">Main user journey</h4>
@@ -235,7 +233,7 @@
         <section class="section py-5" id="accessibility">
             <div class="container">
                 <h4 class="mb-3">Accessibility considerations</h4>
-                <ol>
+                <ol class="w-50">
                     <li>
                         Clear labels to facilitate screen reader interpretation of interactive elements.
                     </li>
@@ -243,29 +241,6 @@
                         A main menu designed to guide users through the event search process more efficiently.
                     </li>
                 </ol>
-            </div>
-        </section>
-        <section class="section py-5" id="responsive-design">
-            <div class="container">
-                <h4 class="mb-3">Responsive design</h4>
-                <div class="d-flex flex-wrap gap-5">
-                    <div class="d-flex flex-column flex-1 flex-basis-25 gap-2">
-                        <h5>Desktop</h5>
-                        <img class="img-fluid" src="/images/cakeseable/desktop.png" alt="Desktop version">
-                    </div>
-                    <div class="d-flex flex-column flex-1 gap-2">
-                        <h5>
-                            Tablet
-                        </h5>
-                        <img class="img-fluid" src="/images/cakeseable/tablet.png" alt="Tablet version">
-                    </div>
-                    <div class="d-flex flex-column flex-1 gap-2">
-                        <h5>
-                            Mobile
-                        </h5>
-                        <img class="img-fluid" src="/images/cakeseable/mobile.png" alt="Mobile version">
-                    </div>
-                </div>
             </div>
         </section>
         <section class="section py-5">
