Add responsive styles

--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 <body>
     <div class="navbar">
         <div class="container">
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center gap-1">
                 <a class="person-name" href="/">
-                    <h1 class="fs-5">Elsa Quintana</h1>
+                    <h1 class="fs-6 fs-lg-5">Elsa Quintana</h1>
                     <span class="person-job">UX Designer</span>
                 </a>
                 <nav class="nav">
@@ -28,7 +28,7 @@
     <header class="header header-home">
         <div class="container">
             <h2 class="h1 mb-5">The <strong class="text-white">design</strong> is a silent conversation between the designer and the <strong class="text-white">user</strong>.</h2>
-            <p class="mb-0">Hi!👋🏻 I'm Elsa, a UX Designer👩🏻‍💻. Welcome to my portfolio! I'd like to show you how I use a user-centered approach to create functional and enjoyable digital experiences.</p>
+            <strong class="mb-0">Hi!👋🏻 I'm Elsa, a UX Designer👩🏻‍💻. Welcome to my portfolio! I'd like to show you how I use a user-centered approach to create functional and enjoyable digital experiences.</strong>
             <a class="scroll-down" href="#projects">
                 <svg class="scroll-down-icon" width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M10.0011 1.63769L10.0268 19.4277L3.08062 13.9906C2.91953 13.8647 2.73371 13.77 2.53378 13.7118C2.33385 13.6536 2.12372 13.6331 1.91539 13.6514C1.49464 13.6885 1.10677 13.8816 0.837105 14.1882C0.567435 14.4948 0.438053 14.8899 0.477425 15.2865C0.516794 15.6831 0.721693 16.0487 1.04704 16.303L10.606 23.792C10.682 23.8424 10.7618 23.8875 10.8449 23.9268C10.9245 23.9267 10.9723 24.0017 11.0519 24.0316C11.2345 24.0993 11.4288 24.1347 11.6249 24.1359C11.8211 24.1343 12.0154 24.0984 12.1977 24.0302C12.2773 24.0302 12.3249 23.9551 12.4044 23.925C12.4873 23.8855 12.5671 23.8403 12.6429 23.7898L22.1801 16.2788C22.3596 16.1375 22.5037 15.9608 22.6025 15.7611C22.7012 15.5613 22.752 15.3435 22.7514 15.1231C22.7516 14.7727 22.6216 14.4332 22.3839 14.1636C22.2502 14.0118 22.0859 13.8865 21.9006 13.7947C21.7153 13.7029 21.5126 13.6463 21.3042 13.6285C21.0957 13.6106 20.8856 13.6317 20.6858 13.6905C20.486 13.7492 20.3005 13.8447 20.1399 13.9711L13.2095 19.424L13.1837 1.63405C13.1832 1.23622 13.0149 0.854885 12.7161 0.573921C12.4172 0.292958 12.0122 0.135384 11.5902 0.135865C11.1681 0.136347 10.7636 0.294844 10.4656 0.57649C10.1675 0.858136 10.0005 1.23985 10.0011 1.63769Z" fill="#f4e7ff"/>
@@ -39,7 +39,7 @@
     <main class="main mb-5">
         <div class="container" id="projects">
             <div class="d-flex flex-column row-gap-7">
-                <div class="d-flex flex-row">
+                <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Sango</h3>
                         <p class="mb-4">Find out when and where to do what you love. Easily plan your schedule, save your favorite events, and quickly find what you need.</p>
@@ -49,7 +49,7 @@
                         <img class="img-fluid" src="./images/sango/sango-template.png" alt="Sango app in a mobile" />
                     </div>
                 </div>
-                <div class="d-flex flex-row">
+                <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Vetsanmascotas</h3>
                         <p class="mb-4">Your veterinary clinic now closer to you. Get to know our services and team and register your pet to keep track of their care.</p>
@@ -59,7 +59,7 @@
                         <img class="img-fluid" src="./images/vetsan/vetsan-template.png" alt="Vetsanmascotas app in a mobile" />
                     </div>
                 </div>
-                <div class="d-flex flex-row">
+                <div class="d-flex flex-column-reverse flex-lg-row">
                     <div class="flex-1">
                         <h3 class="h2 mb-2">Cakeseable</h3>
                         <p class="mb-4">Creative pastry is at your fingertips. Design unique cakes, have them delivered to your home and surprise your loved ones.</p>
