--- a/projects/cakeseable.html
+++ b/projects/cakeseable.html
@@ -12,9 +12,9 @@
 <body class="project-cakeseable">
     <div class="navbar">
         <div class="container">
-            <div class="d-flex justify-content-between align-items-center">
+            <div class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center gap-1">
                 <a class="person-name" href="/">
-                    <h1 class="fs-5">Elsa Quintana</h1>
+                    <h1 class="fs-6 fs-lg-5">Elsa Quintana</h1>
                     <span class="person-job">UX Designer</span>
                 </a>
                 <nav class="nav">
