Add styles for mobile devices

--- a/contact.html
+++ b/contact.html
@@ -25,12 +25,12 @@
             </div>
         </div>
     </div>
-    <main class="container pt-8 mb-4">
-        <h2 class="h1 mb-4">Let's chat...</h2>
+    <main class="container pt-2-5 pt-lg-8 mb-4">
+        <h2 class="h1 mb-2-5 mb-lg-4">Let's chat...</h2>
         <p>Thank you for exploring my work!</p>
-        <p class="container-xl mb-7">If you have any ideas, questions, or simply wish to connect☕please don't hesitate to get in touch. I am always open to new projects and collaborations🤝.</p>
-        <div class="container container-md">
-            <h3 class="h2 mb-6">Get in touch.</h3>
+        <p class="container-xl mb-4 mb-lg-7">If you have any ideas, questions, or simply wish to connect☕please don't hesitate to get in touch. I am always open to new projects and collaborations🤝.</p>
+        <div class="container container-md px-0">
+            <h3 class="h2 mb-2-5 mb-lg-6">Get in touch.</h3>
             <form method="post" action="https://formspree.io/f/xvgookbd" id="contact-form">
                 <label class="visually-hidden" for="name">Your Name</label>
                 <input class="form-control mb-4" type="text" id="name" name="name" placeholder="Your Name" autocomplete="full-name" required>
