--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <title>Elsa Quintana's portfolio</title>
 </head>
 <body>
-    <div class="navbar">
+    <div class="navbar navbar-home">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center gap-1">
                 <a class="person-name" href="/">
@@ -27,7 +27,7 @@
     </div>
     <header class="header header-home">
         <div class="container">
-            <h2 class="h1 mb-5">The <strong class="text-white">design</strong> is a silent conversation between the designer and the <strong class="text-white">user</strong>.</h2>
+            <h2 class="display-1 mb-5">The <strong class="text-white">design</strong> is a silent conversation between the designer and the <strong class="text-white">user</strong>.</h2>
             <strong class="mb-0">Hi!👋🏻 I'm Elsa, a UX Designer👩🏻‍💻. Welcome to my portfolio! I'd like to show you how I use a user-centered approach to create functional and enjoyable digital experiences.</strong>
             <a class="scroll-down" href="#projects">
                 <svg class="scroll-down-icon" width="23" height="25" viewBox="0 0 23 25" fill="none" xmlns="http://www.w3.org/2000/svg">
