--- a/projects/sango.html
+++ b/projects/sango.html
@@ -27,11 +27,11 @@
     </div>
     <header class="header">
         <div class="container">
-            <div class="d-flex align-items-center column-gap-7">
+            <div class="d-flex flex-column-reverse flex-lg-row align-items-center column-gap-7 row-gap-2-5">
                 <div class="flex-1">
-                    <h2 class="mb-1">SanGo</h2>
-                    <h5 class="mb-2">Responsive app and website</h5>
-                    <p class="mb-4">
+                    <h2 class="h1 mb-0 mb-lg-1">SanGo</h2>
+                    <h5 class="mb-2 mb-lg-3">Responsive app and website</h5>
+                    <p class="mb-3 mb-lg-4">
                         SanGo is a platform designed to help people discover and enjoy
                         cultural events in Santander city. It provides detailed information about
                         events and allows users to filter by category for a personalized
@@ -41,7 +41,7 @@
                     <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
                 </div>
                 <div class="flex-1">
-                    <img src="/images/sango/app-image.png" alt="Sango App overview">
+                    <img class="img-fluid" src="/images/sango/app-image.png" alt="Sango App overview">
                 </div>
             </div>
         </div>
@@ -49,7 +49,7 @@
     <main class="main">
         <section class="section py-5">
             <div class="container">
-                <div class="d-flex column-gap-7 mb-3">
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5 mb-2 mb-lg-3">
                     <div class="flex-1 flex-basis-25">
                         <h5>Roles & Responsabilities</h5>
                         <p><strong>UX research:</strong> user interviews, personas, empathy mapping, problem statements,
@@ -68,11 +68,11 @@
                     </div>
                     <div class="flex-1">
                         <h5>Collaboration</h5>
-                        <p>Family and friends in the role of users</p>
+                        <p class="mb-0">Family and friends in the role of users</p>
                     </div>
                     <div class="flex-1">
                         <h5>Duration</h5>
-                        <p>3 weeks</p>
+                        <p class="mb-0">3 weeks</p>
                     </div>
                 </div>
                 <div>
@@ -101,9 +101,9 @@
         </div>
         <section class="section py-5" id="user-research">
             <div class="container">
-                <h3 class="mb-3">Understanding the user</h3>
-                <h4 class="mb-3">User research. Resume</h4>
-                <p class="mb-3">
+                <h3 class="mb-2 mb-lg-3">Understanding the user</h3>
+                <h4 class="mb-2 mb-lg-3">User research. Resume</h4>
+                <p class="mb-2 mb-lg-3">
                     Through user interviews and empathy mapping, I sought to understand the needs of the target
                     audience.
                     A significant segment identified in the research was older adults with a high cultural background
@@ -114,7 +114,7 @@
                     a wider variety of cultural events than those advertised in traditional media, which many found to
                     be unappealing.
                 </p>
-                <h4 class="mb-3">Persona</h4>
+                <h4 class="mb-2 mb-lg-3">Persona</h4>
                 <div class="text-center">
                     <img class="img-fluid" src="/images/sango/persona.png" alt="Persona">
                 </div>
@@ -122,13 +122,13 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Competitive audit
+                <h4 class="mb-2 mb-lg-3">Competitive audit
                 </h4>
-                <p class="mb-7">A competitive product audit has given me valuable insights into the strengths and weaknesses of the
+                <p class="mb-2-5 mb-lg-7">A competitive product audit has given me valuable insights into the strengths and weaknesses of the
                     app and web platform, guiding the future development efforts.</p>
-                <div class="d-flex column-gap-7">
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5">
                     <div class="flex-1">
-                        <h4 class="mb-3 text-center">Gaps</h4>
+                        <h4 class="mb-2 mb-lg-3 text-lg-center">Gaps</h4>
                         <ol>
                             <li>
                                 User experience: The interface could benefit from a redesign to improve usability and
@@ -152,7 +152,7 @@
                         </ol>
                     </div>
                     <div class="flex-1">
-                        <h4 class="mb-3 text-center">Opportunities</h4>
+                        <h4 class="mb-2 mb-lg-3 text-lg-center">Opportunities</h4>
                         <ol>
                             <li>Customize the user interface to reflect the local culture and specific aesthetic preferences
                                 of Santander.
@@ -178,13 +178,13 @@
         <section class="section py-5" id="wireframes">
             <div class="container">
                 <div class="mb-6">
-                    <h3 class="mb-3">Starting the design</h3>
-                    <h4 class="mb-3">Digital wireframes</h4>
-                    <p class="mb-4">I conducted a rapid ideation session to address the issues highlighted in the competitive analysis.
+                    <h3 class="mb-2 mb-lg-3">Starting the design</h3>
+                    <h4 class="mb-2 mb-lg-3">Digital wireframes</h4>
+                    <p class="mb-3 mb-lg-4">I conducted a rapid ideation session to address the issues highlighted in the competitive analysis.
                         My primary focus was on improving the visibility and discoverability of events within the app. Once
                         I had some rough sketches on paper, I started designing the app. The main goal was to make it easy
                         for users to browse events by category.</p>
-                    <a class="btn btn-primary mb-4" href="#" role="button">View lo-fi prototype</a>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
                 </div>
                 <div class="text-center">
                     <img class="img-fluid" src="/images/sango/lo-fi-prototype.png" alt="Lo-fi prototype">
@@ -193,7 +193,7 @@
         </section>
         <section class="section py-5" id="usability-study">
             <div class="container">
-                <h4 class="mb-7">Usability study. Findings</h4>
+                <h4 class="mb-2-5 mb-lg-7">Usability study. Findings</h4>
                 <div class="findings">
                     <div class="findings-item">
                         <div class="findings-icon-rounded">
@@ -243,14 +243,14 @@
                         <p class="mb-0 text-start"><strong>Recommendations.</strong> The user would like to be recommended events based on their likes and preferences.</p>
                     </div>
                 </div>
-                <h4 class="mb-3">Detailed notes from the usability testing session</h4>
+                <h4 class="mb-2 mb-lg-3">Detailed notes from the usability testing session</h4>
                 <img class="img-fluid w-100" src="/images/sango/detail-notes-usability-study.png" alt="Usability study notes">
         </section>
         <section class="section py-5" id="mockups">
             <div class="container">
                 <div class="mb-6">
-                    <h4 class="mb-3">Mockups</h4>
-                    <p class="mb-3">After conducting a usability study, I made design modifications in accordance with user preferences
+                    <h4 class="mb-2 mb-lg-3">Mockups</h4>
+                    <p class="mb-2-5 mb-lg-3">After conducting a usability study, I made design modifications in accordance with user preferences
                         and introduced a new reminder function.</p>
                     <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
                 </div>
@@ -273,13 +273,13 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Sticker sheet</h4>
+                <h4 class="mb-2 mb-lg-3">Sticker sheet</h4>
                 <img class="img-fluid" src="/images/sango/sticker-sheet.png" alt="Sticker sheet">
             </div>
         </section>
         <section class="section py-5" id="accessibility">
             <div class="container">
-                <h4 class="mb-3">Accessibility considerations</h4>
+                <h4 class="mb-2 mb-lg-3">Accessibility considerations</h4>
                 <div class="d-flex">
                     <div class="flex-1">
                         <ol>
@@ -291,14 +291,14 @@
                             </li>
                         </ol>
                     </div>
-                    <div class="flex-1"></div>
+                    <div class="flex-1 d-none d-lg-block"></div>
                 </div>
             </div>
         </section>
         <section class="section py-5" id="responsive-design">
             <div class="container">
-                <h4 class="mb-3">Responsive design</h4>
-                <div class="d-flex flex-wrap gap-5">
+                <h4 class="mb-2 mb-lg-3">Responsive design</h4>
+                <div class="d-flex flex-column flex-lg-row flex-wrap column-gap-5 row-gap-2-5">
                     <div class="d-flex flex-column flex-1 flex-basis-25 gap-2">
                         <h5>Desktop</h5>
                         <img class="img-fluid" src="/images/sango/desktop.png" alt="Desktop version">
@@ -310,9 +310,7 @@
                         <img class="img-fluid" src="/images/sango/tablet.png" alt="Tablet version">
                     </div>
                     <div class="d-flex flex-column flex-1 gap-2">
-                        <h5>
-                            Mobile
-                        </h5>
+                        <h5>Mobile</h5>
                         <img class="img-fluid" src="/images/sango/mobile.png" alt="Mobile version">
                     </div>
                 </div>
@@ -320,17 +318,17 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Takeways</h4>
-                <div class="d-flex column-gap-7">
+                <h4 class="mb-2 mb-lg-3">Takeways</h4>
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5">
                     <div class="flex-1">
-                        <p><strong>Impact:</strong> The app allows users to quickly and easily access Santander's cultural
+                        <p class="mb-0"><strong>Impact:</strong> The app allows users to quickly and easily access Santander's cultural
                             programming, share their favorite activities, save events of interest, and be redirected to the
                             official website to purchase tickets. As one user put it: “The app made it super easy to find a
                             fun event for the weekend! I definitely recommend SanGo to everyone who wants to stay up-to-date
                             on Santander's leisure activities”.</p>
                     </div>
                     <div class="flex-1">
-                        <p><strong>What I learned:</strong> While designing the SanGo app, I learned that initial ideas are
+                        <p class="mb-0"><strong>What I learned:</strong> While designing the SanGo app, I learned that initial ideas are
                             just the starting point. Usability studies and user feedback influenced every version of the
                             designs, and it's an ongoing process of improvement.</p>
                     </div>
