--- a/about.html
+++ b/about.html
@@ -25,24 +25,24 @@
             </div>
         </div>
     </div>
-    <main class="container pt-8 mb-4">
+    <main class="container pt-2-5 pt-lg-8 mb-4">
         <div class="d-flex column-gap-7">
             <div class="flex-1">
-                <h2 class="h2 text-center mb-4">A little about me</h2>
+                <h2 class="h1 text-center mb-2-5 mb-lg-4">A little about me</h2>
             </div>
-            <div class="flex-1"></div>
+            <div class="flex-1 d-none d-md-block"></div>
         </div>
-        <div class="d-flex column-gap-7">
+        <div class="d-flex flex-column-reverse flex-lg-row column-gap-7 row-gap-2-5">
             <div class="flex-1">
                 <p>Hi, I'm Elsa!👋🏻Nice to meet you! I'm from the north of Spain. Humor is one of my strong suits😏. I enjoy cooking and hosting gatherings for my loved ones💗. I'm also a big fan of video games🎮. Rock, blues, and country music are my go-to genres🤘🏻and I occasionally pick up my electric guitar. I'm  an animal lover so let's not forget about Lana🐈my Siamese cat. She's basically the queen of the house, but I wouldn't have it any other way💘😍.</p>
                 <p>My path into UX design doesn't start in a conventional way at all. I've worked in various environments, from the kitchen to healthcare, and in each one I discovered the importance of empathy, attention to detail, and the search for creative solutions. However, it was my time in the workplace that really helped me find my calling. In each of these jobs, I took the opportunity to improve the lives of the people around me and in each one I discovered the importance of the user experience.</p>
-                <p class="mb-4">That's when I decided to embark on this exciting journey into UX design, when I realized that this discipline allowed me to combine my passion for creativity, my interest in people and my desire to make the world a better place. I've always believed that beauty lies in simplicity and in this increasingly complex world, my goal is to create intuitive, accessible user experiences that make life easier and more enjoyable for everyone.</p>
+                <p class="mb-2-5 mb-lg-4">That's when I decided to embark on this exciting journey into UX design, when I realized that this discipline allowed me to combine my passion for creativity, my interest in people and my desire to make the world a better place. I've always believed that beauty lies in simplicity and in this increasingly complex world, my goal is to create intuitive, accessible user experiences that make life easier and more enjoyable for everyone.</p>
                 <div class="text-center">
                     <a class="btn btn-primary" href="./downloads/CV UX.pdf">Download Resume</a>
                 </div>
             </div>
-            <div class="flex-1">
-                <img class="img-fluid" src="./images/me.jpg" alt="A picture of me">
+            <div class="d-flex flex-1">
+                <img class="img-fluid object-fit-contain align-self-start" src="./images/me.jpg" alt="A picture of me">
             </div>
         </div>
     </main>
