Add Vetsan project

--- a/projects/vetsan.html
+++ b/projects/vetsan.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/src/css/style.css">
-    <title>Elsa Quintana's portfolio</title>
+    <title>Vetsan | Elsa Quintana's portfolio</title>
 </head>
 <body class="project-vetsan">
     <div class="navbar">
@@ -27,11 +27,11 @@
     </div>
     <header class="header">
         <div class="container">
-            <div class="d-flex align-items-center column-gap-7">
+            <div class="d-flex flex-column-reverse flex-lg-row align-items-center column-gap-7 row-gap-2-5">
                 <div class="flex-1">
-                    <h2 class="mb-1">Vetsanmascotas.com</h2>
-                    <h5 class="mb-2">Responsive app and website</h5>
-                    <p class="mb-4">
+                    <h2 class="h1 mb-0 mb-lg-1">Vetsanmascotas.com</h2>
+                    <h5 class="mb-2 mb-lg-3">Responsive app and website</h5>
+                    <p class="mb-2 mb-lg-3 mb-lg-4">
                         A responsive website that allows veterinary clinic users vetsanmascotas to register their pets to stay up-to-date on their vaccinations and deworming, keeping a convenient and simple control of their health.
                     </p>
                     <a class="btn btn-primary" href="#" role="button">View Final Prototype</a>
@@ -45,7 +45,7 @@
     <main class="main">
         <section class="section py-5">
             <div class="container">
-                <div class="d-flex column-gap-7 mb-3">
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5 mb-2 mb-lg-3">
                     <div class="flex-1 flex-basis-25">
                         <h5>Roles & Responsabilities</h5>
                         <p><strong>UX research:</strong> user interviews, personas, empathy mapping, problem statements, competitive audit, ideation, usability studies.</p>
@@ -61,11 +61,11 @@
                     </div>
                     <div class="flex-1">
                         <h5>Collaboration</h5>
-                        <p>Family and friends in the role of users</p>
+                        <p class="mb-0">Family and friends in the role of users</p>
                     </div>
                     <div class="flex-1">
                         <h5>Duration</h5>
-                        <p>3 weeks</p>
+                        <p class="mb-0">3 weeks</p>
                     </div>
                 </div>
                 <div>
@@ -91,12 +91,12 @@
         </div>
         <section class="section py-5" id="user-research">
             <div class="container">
-                <h3 class="mb-3">Understanding the user</h3>
-                <h4 class="mb-3">User research. Resume</h4>
-                <p class="mb-3">I carried out interviews and developed empathy maps to grasp user needs and design accordingly. A key user group identified in the research were young adults with multiple responsibilities, frustrated by the challenge of staying on top of their pet's vaccinations. Another group of users with busy schedules wanted to minimize unnecessary clinic visits, preferring to stay informed about their pet's health and manage reminders conveniently from their phones.
+                <h3 class="mb-2 mb-lg-3">Understanding the user</h3>
+                <h4 class="mb-2 mb-lg-3">User research. Resume</h4>
+                <p class="mb-2 mb-lg-3">I carried out interviews and developed empathy maps to grasp user needs and design accordingly. A key user group identified in the research were young adults with multiple responsibilities, frustrated by the challenge of staying on top of their pet's vaccinations. Another group of users with busy schedules wanted to minimize unnecessary clinic visits, preferring to stay informed about their pet's health and manage reminders conveniently from their phones.
                 </p>
-                <h4 class="mb-3">Persona</h4>
-                <div class="mb-3 text-center">
+                <h4 class="mb-2 mb-lg-3">Persona</h4>
+                <div class="mb-2 mb-lg-3 text-center">
                     <img class="img-fluid" src="/images/vetsan/persona-1.png" alt="Persona 1">
                 </div>
                 <div class="text-center">
@@ -106,18 +106,18 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Competitive audit
+                <h4 class="mb-2 mb-lg-3">Competitive audit
                 </h4>
-                <p class="mb-7">A competitive product audit has given me valuable insights into the strengths and weaknesses of the app and web platform, guiding the future development efforts.</p>
-                <div class="d-flex column-gap-7">
+                <p class="mb-2-5 mb-lg-7">A competitive product audit has given me valuable insights into the strengths and weaknesses of the app and web platform, guiding the future development efforts.</p>
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5">
                     <div class="flex-1">
-                        <h4 class="mb-3 text-center">Gaps</h4>
+                        <h4 class="mb-2 mb-lg-3 text-lg-center">Gaps</h4>
                         <ol>
                             <li>The competitor's website does not offer a pet registration service for its users.</li>
                         </ol>
                     </div>
                     <div class="flex-1">
-                        <h4 class="mb-3 text-center">Opportunities</h4>
+                        <h4 class="mb-2 mb-lg-3 text-lg-center">Opportunities</h4>
                         <ol>
                             <li>Implement a user flow on our website for pet registration.</li>
                             <li>The user should be able to access their pet's medical information quickly, easily, and securely.</li>
@@ -129,33 +129,33 @@
         <section class="section py-5" id="wireframes">
             <div class="container">
                 <div class="mb-4">
-                    <h3 class="mb-3">Starting the design</h3>
-                    <h4 class="mb-3">Digital wireframes</h4>
-                    <p class="mb-4">I designed a pet registration form. The medical history is updated at the clinic with each visit, and the user can view it from their account to stay up-to-date on their pet's vaccinations and deworming.</p>
-                    <a class="btn btn-primary" href="#" role="button">View lo-fi prototype</a>
+                    <h3 class="mb-2 mb-lg-3">Starting the design</h3>
+                    <h4 class="mb-2 mb-lg-3">Digital wireframes</h4>
+                    <p class="mb-3 mb-lg-4">I designed a pet registration form. The medical history is updated at the clinic with each visit, and the user can view it from their account to stay up-to-date on their pet's vaccinations and deworming.</p>
+                    <a class="btn btn-primary mb-0 mb-lg-4" href="#" role="button">View lo-fi prototype</a>
                 </div>
                 <p class="mb-3">The diagrams illustrate the pet registration process</p>
-                <div class="d-flex column-gap-3 mb-3 text-center">
-                    <div class="flex-1"></div>
+                <div class="d-flex flex-column flex-lg-row row-column-gap-3 mb-3 text-center">
+                    <div class="flex-1 d-none d-lg-block"></div>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/vetsan/register-pet-lo-fi.png" alt="Lo-fi prototype">
                     </div>
-                    <strong class="flex-1 mt-3 text-start">Users can register their pets with essential details</strong>
+                    <strong class="flex-1 mt-0 mt-lg-3 text-start">Users can register their pets with essential details</strong>
                 </div>
-                <div class="d-flex column-gap-3 text-center">
-                    <strong class="flex-1 mt-3 text-start">Users can view upcoming reminders for their pets.</strong>
+                <div class="d-flex flex-column-reverse flex-lg-row row-column-gap-3 text-center">
+                    <strong class="flex-1 mt-0 mt-lg-3 text-start">Users can view upcoming reminders for their pets.</strong>
                     <div class="flex-1">
                         <img class="img-fluid" src="/images/vetsan/reminders-lo-fi.png" alt="Lo-fi prototype">
                     </div>
-                    <div class="flex-1"></div>
+                    <div class="flex-1 d-none d-lg-block"></div>
                 </div>
             </div>
         </section>
         <section class="section py-5" id="mockups">
             <div class="container">
                 <div class="mb-6">
-                    <h4 class="mb-3">Mockups</h4>
-                    <p class="mb-3">Following usability studies, I gave more visibility to the “register your pet” section and added another section for “health plans” so that users can also add them to reminders.</p>
+                    <h4 class="mb-2 mb-lg-3">Mockups</h4>
+                    <p class="mb-2 mb-lg-3">Following usability studies, I gave more visibility to the “register your pet” section and added another section for “health plans” so that users can also add them to reminders.</p>
                     <a class="btn btn-primary" href="#" role="button">View hi-fi prototype</a>
                 </div>
                 <div class="d-flex flex-wrap flex-wrap gap-4 justify-content-center mb-4">
@@ -180,17 +180,17 @@
         </section>
         <section class="section py-5" id="accessibility">
             <div class="container">
-                <h4 class="mb-3">Accessibility considerations</h4>
+                <h4 class="mb-2 mb-lg-3">Accessibility considerations</h4>
                 <p class="mb-0">Simple navigation compatible with screen readers through the addition of alternative text to images.</p>
             </div>
         </section>
         <section class="section py-5" id="responsive-design">
             <div class="container">
-                <h4 class="mb-3">Responsive design</h4>
-                <p class="mb-3">The sitemap served as a design framework for organizing each screen, guaranteeing a unified user experience regardless of the device.</p>
+                <h4 class="mb-2 mb-lg-3">Responsive design</h4>
+                <p class="mb-2 mb-lg-3">The sitemap served as a design framework for organizing each screen, guaranteeing a unified user experience regardless of the device.</p>
                 <img class="img-fluid" src="/images/vetsan/site-map.png" alt="Sitemap">
-                <p class="mb-3">Designs were adapted for mobile, tablet, and desktop devices based on specific use cases.</p>
-                <div class="d-flex flex-wrap gap-5">
+                <p class="mb-2 mb-lg-3">Designs were adapted for mobile, tablet, and desktop devices based on specific use cases.</p>
+                <div class="d-flex flex-column flex-lg-row flex-wrap column-gap-5 row-gap-2-5">
                     <div class="d-flex flex-column flex-1 flex-basis-25 gap-2">
                         <h5>Desktop</h5>
                         <img class="img-fluid" src="/images/vetsan/home-hi-fi.png" alt="Desktop version">
@@ -212,8 +212,8 @@
         </section>
         <section class="section py-5">
             <div class="container">
-                <h4 class="mb-3">Takeways</h4>
-                <div class="d-flex column-gap-7">
+                <h4 class="mb-2 mb-lg-3">Takeways</h4>
+                <div class="d-flex flex-column flex-lg-row column-gap-7 row-gap-2-5">
                     <div class="flex-1">
                         <p class="mb-0"><strong>Impact:</strong> The application allows users to quickly and conveniently access their pet's reminders, providing them with real-time relevant information without having to visit the clinic or call to verify upcoming vaccinations and deworming. A user testimonial: "The online registration feature is exactly what I needed! It allows me to access reminders quickly and schedule a vaccination appointment for my pet in advance."</p>
                     </div>
